fixed gap between checkboxes and labels

--- a/frontend/src/components/Profile.css
+++ b/frontend/src/components/Profile.css
@@ -236,13 +236,15 @@ p, h1 {
   position: relative; 
   display: flex;
   z-index: 6;
-  width: 50%; 
+  width: 40%; 
   box-shadow: 0px 1px 5px var(--shadows); /* Add shadow for depth */
 }
 
 #reportCheckbox {
   padding-left: 5%;
   padding-bottom: 5%;
+  display: flex;
+  flex-direction: column;
 }
 
 #descriptionBox{
@@ -257,4 +259,14 @@ p, h1 {
   background-color: var(--card-background);
   color: var(--ordinary-text);
   box-shadow: 0px 1px 5px var(--shadows);
+}
+
+.form-check{
+  text-align: left;
+  width: 60%;
+  margin-left: 30%;
+}
+
+.label{
+  margin: 0;
 }
